--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,5 @@ html(lang="en")
     title= title
     link(rel='stylesheet', type='text/css', href='stylesheets/style.css')
   body
-    script(type='text/javascript', src='lib/impact/impact.js')
-    script(type='text/javascript', src='lib/game/main.js')
+    script(type='text/javascript', src='game.min.js')
     canvas#canvas
