Adding styles back

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
   head
     title= title
+    link(rel='stylesheet', type='text/css', href='stylesheets/style.css')
+    script(type='text/javascript', src='javascripts/game.min.js')
   body
-    script(type='text/javascript', src='game.min.js')
     canvas#canvas
