Updating path in the jade template

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
   head
     title= title
-    link(rel='stylesheet', type='text/css', href='stylesheets/styles.css')
-    script(type='text/javascript', src='game.min.js')
+    link(rel='stylesheet', type='text/css', href='public/stylesheets/styles.css')
+    script(type='text/javascript', src='public/game.min.js')
   body
     canvas#canvas
