--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,10 @@ html(lang="en")
   head
     title= title
     link(rel='stylesheet', type='text/css', href='public/stylesheets/styles.css')
-    script(type='text/javascript', src='public/game.min.js')
+    if development
+      script(type='text/javascript', src='lib/impact/impact.js')
+      script(type='text/javascript', src='lib/game/main.js')
+    else
+      script(type='text/javascript', src='public/game.min.js')
   body
     canvas#canvas
