--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,16 @@ html(lang="en")
   head
     title= title
     link(rel='stylesheet', type='text/css', href='public/stylesheets/styles.css')
+    script(type='text/javascript')
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-48093245-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
     if development
       script(type='text/javascript', src='lib/impact/impact.js')
       script(type='text/javascript', src='lib/game/main.js')
