Moving ga into its own file

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,16 +7,7 @@ html(lang="en")
       script(type='text/javascript', src='lib/impact/impact.js')
       script(type='text/javascript', src='lib/game/main.js')
     else
+      script(type='text/javascript', src='public/analytics.js')
       script(type='text/javascript', src='public/game.min.js')
-    script(type='text/javascript')
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-48093245-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
   body
     canvas#canvas
