--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -6,3 +6,13 @@ html,body {
   padding: 0;
   font-size: 18pt;
 }
+.gui-overlay {
+  position: fixed;
+  display: none;
+  opacity: 0.8;
+  filter:alpha(opacity=80); /* For IE8 and earlier */
+}
+.top-frame,.left-frame,.right-frame, .bottom-frame {
+  background: #ddd;
+  display: block;
+}
