--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,7 @@ html(lang="en")
     title= title
     link(rel='stylesheet', type='text/css', href='public/stylesheets/styles.css')
     script(type='text/javascript', src='public/jquery-1.11.0.min.js')
+    script(type='text/javascript', src='public/underscore-1.6.0.min.js')
     if development
       script(type='text/javascript', src='lib/impact/impact.js')
       script(type='text/javascript', src='lib/game/main.js')
